refactor block_txs endpoint with union type
