# openapi_server/models/block_tx.py
@@ -1,0 +1,323 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model_ import Model
+from openapi_server.models.block_tx_utxo import BlockTxUtxo
+from openapi_server.models.tx_account import TxAccount
+from openapi_server.models.values import Values
+from openapi_server import util
+
+from openapi_server.models.block_tx_utxo import BlockTxUtxo  # noqa: E501
+from openapi_server.models.tx_account import TxAccount  # noqa: E501
+from openapi_server.models.values import Values  # noqa: E501
+
+class BlockTx(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, currency_type='account', tx_hash=None, no_inputs=None, no_outputs=None, total_input=None, total_output=None, height=None, timestamp=None, values=None):  # noqa: E501
+        """BlockTx - a model defined in OpenAPI
+
+        :param currency_type: The currency_type of this BlockTx.  # noqa: E501
+        :type currency_type: str
+        :param tx_hash: The tx_hash of this BlockTx.  # noqa: E501
+        :type tx_hash: str
+        :param no_inputs: The no_inputs of this BlockTx.  # noqa: E501
+        :type no_inputs: int
+        :param no_outputs: The no_outputs of this BlockTx.  # noqa: E501
+        :type no_outputs: int
+        :param total_input: The total_input of this BlockTx.  # noqa: E501
+        :type total_input: Values
+        :param total_output: The total_output of this BlockTx.  # noqa: E501
+        :type total_output: Values
+        :param height: The height of this BlockTx.  # noqa: E501
+        :type height: int
+        :param timestamp: The timestamp of this BlockTx.  # noqa: E501
+        :type timestamp: int
+        :param values: The values of this BlockTx.  # noqa: E501
+        :type values: Values
+        """
+        self.openapi_types = {
+            'currency_type': str,
+            'tx_hash': str,
+            'no_inputs': int,
+            'no_outputs': int,
+            'total_input': Values,
+            'total_output': Values,
+            'height': int,
+            'timestamp': int,
+            'values': Values
+        }
+
+        self.attribute_map = {
+            'currency_type': 'currency_type',
+            'tx_hash': 'tx_hash',
+            'no_inputs': 'no_inputs',
+            'no_outputs': 'no_outputs',
+            'total_input': 'total_input',
+            'total_output': 'total_output',
+            'height': 'height',
+            'timestamp': 'timestamp',
+            'values': 'values'
+        }
+
+        if currency_type is None:
+            raise ValueError("Invalid value for `currency_type`, must not be `None`")  # noqa: E501
+        self._currency_type = currency_type
+        if tx_hash is None:
+            raise ValueError("Invalid value for `tx_hash`, must not be `None`")  # noqa: E501
+        self._tx_hash = tx_hash
+        self._no_inputs = no_inputs
+        self._no_outputs = no_outputs
+        self._total_input = total_input
+        self._total_output = total_output
+        if height is None:
+            raise ValueError("Invalid value for `height`, must not be `None`")  # noqa: E501
+        self._height = height
+        if timestamp is None:
+            raise ValueError("Invalid value for `timestamp`, must not be `None`")  # noqa: E501
+        self._timestamp = timestamp
+        if values is None:
+            raise ValueError("Invalid value for `values`, must not be `None`")  # noqa: E501
+        self._values = values
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'BlockTx':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The block_tx of this BlockTx.  # noqa: E501
+        :rtype: BlockTx
+        """
+        return util.deserialize_model(dikt, cls)
+
+    def to_dict(self, prefix=""):
+        """Returns the model as a dict:
+
+        :return: The BlockTx as a dict
+        :rtype: dict
+        """
+        return { 'currency_type': self._currency_type,
+            'tx_hash': self._tx_hash,
+            'no_inputs': self._no_inputs,
+            'no_outputs': self._no_outputs,
+            'total_input': self._total_input,
+            'total_output': self._total_output,
+            'height': self._height,
+            'timestamp': self._timestamp,
+            'values': self._values }
+
+
+    @property
+    def currency_type(self):
+        """Gets the currency_type of this BlockTx.
+
+
+        :return: The currency_type of this BlockTx.
+        :rtype: str
+        """
+        return self._currency_type
+
+    @currency_type.setter
+    def currency_type(self, currency_type):
+        """Sets the currency_type of this BlockTx.
+
+
+        :param currency_type: The currency_type of this BlockTx.
+        :type currency_type: str
+        """
+        if currency_type is None:
+            raise ValueError("Invalid value for `currency_type`, must not be `None`")  # noqa: E501
+
+        self._currency_type = currency_type
+
+    @property
+    def tx_hash(self):
+        """Gets the tx_hash of this BlockTx.
+
+        Transaction hash  # noqa: E501
+
+        :return: The tx_hash of this BlockTx.
+        :rtype: str
+        """
+        return self._tx_hash
+
+    @tx_hash.setter
+    def tx_hash(self, tx_hash):
+        """Sets the tx_hash of this BlockTx.
+
+        Transaction hash  # noqa: E501
+
+        :param tx_hash: The tx_hash of this BlockTx.
+        :type tx_hash: str
+        """
+        if tx_hash is None:
+            raise ValueError("Invalid value for `tx_hash`, must not be `None`")  # noqa: E501
+
+        self._tx_hash = tx_hash
+
+    @property
+    def no_inputs(self):
+        """Gets the no_inputs of this BlockTx.
+
+
+        :return: The no_inputs of this BlockTx.
+        :rtype: int
+        """
+        return self._no_inputs
+
+    @no_inputs.setter
+    def no_inputs(self, no_inputs):
+        """Sets the no_inputs of this BlockTx.
+
+
+        :param no_inputs: The no_inputs of this BlockTx.
+        :type no_inputs: int
+        """
+
+        self._no_inputs = no_inputs
+
+    @property
+    def no_outputs(self):
+        """Gets the no_outputs of this BlockTx.
+
+
+        :return: The no_outputs of this BlockTx.
+        :rtype: int
+        """
+        return self._no_outputs
+
+    @no_outputs.setter
+    def no_outputs(self, no_outputs):
+        """Sets the no_outputs of this BlockTx.
+
+
+        :param no_outputs: The no_outputs of this BlockTx.
+        :type no_outputs: int
+        """
+
+        self._no_outputs = no_outputs
+
+    @property
+    def total_input(self):
+        """Gets the total_input of this BlockTx.
+
+
+        :return: The total_input of this BlockTx.
+        :rtype: Values
+        """
+        return self._total_input
+
+    @total_input.setter
+    def total_input(self, total_input):
+        """Sets the total_input of this BlockTx.
+
+
+        :param total_input: The total_input of this BlockTx.
+        :type total_input: Values
+        """
+
+        self._total_input = total_input
+
+    @property
+    def total_output(self):
+        """Gets the total_output of this BlockTx.
+
+
+        :return: The total_output of this BlockTx.
+        :rtype: Values
+        """
+        return self._total_output
+
+    @total_output.setter
+    def total_output(self, total_output):
+        """Sets the total_output of this BlockTx.
+
+
+        :param total_output: The total_output of this BlockTx.
+        :type total_output: Values
+        """
+
+        self._total_output = total_output
+
+    @property
+    def height(self):
+        """Gets the height of this BlockTx.
+
+        Height  # noqa: E501
+
+        :return: The height of this BlockTx.
+        :rtype: int
+        """
+        return self._height
+
+    @height.setter
+    def height(self, height):
+        """Sets the height of this BlockTx.
+
+        Height  # noqa: E501
+
+        :param height: The height of this BlockTx.
+        :type height: int
+        """
+        if height is None:
+            raise ValueError("Invalid value for `height`, must not be `None`")  # noqa: E501
+        if height is not None and height < 1:  # noqa: E501
+            raise ValueError("Invalid value for `height`, must be a value greater than or equal to `1`")  # noqa: E501
+
+        self._height = height
+
+    @property
+    def timestamp(self):
+        """Gets the timestamp of this BlockTx.
+
+        Timestamp  # noqa: E501
+
+        :return: The timestamp of this BlockTx.
+        :rtype: int
+        """
+        return self._timestamp
+
+    @timestamp.setter
+    def timestamp(self, timestamp):
+        """Sets the timestamp of this BlockTx.
+
+        Timestamp  # noqa: E501
+
+        :param timestamp: The timestamp of this BlockTx.
+        :type timestamp: int
+        """
+        if timestamp is None:
+            raise ValueError("Invalid value for `timestamp`, must not be `None`")  # noqa: E501
+
+        self._timestamp = timestamp
+
+    @property
+    def values(self):
+        """Gets the values of this BlockTx.
+
+
+        :return: The values of this BlockTx.
+        :rtype: Values
+        """
+        return self._values
+
+    @values.setter
+    def values(self, values):
+        """Sets the values of this BlockTx.
+
+
+        :param values: The values of this BlockTx.
+        :type values: Values
+        """
+        if values is None:
+            raise ValueError("Invalid value for `values`, must not be `None`")  # noqa: E501
+
+        self._values = values
