# openapi_server/models/block_tx_utxo.py
@@ -11,27 +11,30 @@ from openapi_server import util
 
 from openapi_server.models.values import Values  # noqa: E501
 
-class BlockTxSummary(Model):
+class BlockTxUtxo(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 
     Do not edit the class manually.
     """
 
-    def __init__(self, tx_hash=None, no_inputs=None, no_outputs=None, total_input=None, total_output=None):  # noqa: E501
-        """BlockTxSummary - a model defined in OpenAPI
+    def __init__(self, currency_type='utxo', tx_hash=None, no_inputs=None, no_outputs=None, total_input=None, total_output=None):  # noqa: E501
+        """BlockTxUtxo - a model defined in OpenAPI
 
-        :param tx_hash: The tx_hash of this BlockTxSummary.  # noqa: E501
+        :param currency_type: The currency_type of this BlockTxUtxo.  # noqa: E501
+        :type currency_type: str
+        :param tx_hash: The tx_hash of this BlockTxUtxo.  # noqa: E501
         :type tx_hash: str
-        :param no_inputs: The no_inputs of this BlockTxSummary.  # noqa: E501
+        :param no_inputs: The no_inputs of this BlockTxUtxo.  # noqa: E501
         :type no_inputs: int
-        :param no_outputs: The no_outputs of this BlockTxSummary.  # noqa: E501
+        :param no_outputs: The no_outputs of this BlockTxUtxo.  # noqa: E501
         :type no_outputs: int
-        :param total_input: The total_input of this BlockTxSummary.  # noqa: E501
+        :param total_input: The total_input of this BlockTxUtxo.  # noqa: E501
         :type total_input: Values
-        :param total_output: The total_output of this BlockTxSummary.  # noqa: E501
+        :param total_output: The total_output of this BlockTxUtxo.  # noqa: E501
         :type total_output: Values
         """
         self.openapi_types = {
+            'currency_type': str,
             'tx_hash': str,
             'no_inputs': int,
             'no_outputs': int,
@@ -40,6 +43,7 @@ class BlockTxSummary(Model):
         }
 
         self.attribute_map = {
+            'currency_type': 'currency_type',
             'tx_hash': 'tx_hash',
             'no_inputs': 'no_inputs',
             'no_outputs': 'no_outputs',
@@ -47,6 +51,7 @@ class BlockTxSummary(Model):
             'total_output': 'total_output'
         }
 
+        self._currency_type = currency_type
         self._tx_hash = tx_hash
         self._no_inputs = no_inputs
         self._no_outputs = no_outputs
@@ -54,23 +59,24 @@ class BlockTxSummary(Model):
         self._total_output = total_output
 
     @classmethod
-    def from_dict(cls, dikt) -> 'BlockTxSummary':
+    def from_dict(cls, dikt) -> 'BlockTxUtxo':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The block_tx_summary of this BlockTxSummary.  # noqa: E501
-        :rtype: BlockTxSummary
+        :return: The block_tx_utxo of this BlockTxUtxo.  # noqa: E501
+        :rtype: BlockTxUtxo
         """
         return util.deserialize_model(dikt, cls)
 
     def to_dict(self, prefix=""):
         """Returns the model as a dict:
 
-        :return: The BlockTxSummary as a dict
+        :return: The BlockTxUtxo as a dict
         :rtype: dict
         """
-        return { 'tx_hash': self._tx_hash,
+        return { 'currency_type': self._currency_type,
+            'tx_hash': self._tx_hash,
             'no_inputs': self._no_inputs,
             'no_outputs': self._no_outputs,
             'total_input': self._total_input,
@@ -78,21 +84,42 @@ class BlockTxSummary(Model):
 
 
     @property
+    def currency_type(self):
+        """Gets the currency_type of this BlockTxUtxo.
+
+
+        :return: The currency_type of this BlockTxUtxo.
+        :rtype: str
+        """
+        return self._currency_type
+
+    @currency_type.setter
+    def currency_type(self, currency_type):
+        """Sets the currency_type of this BlockTxUtxo.
+
+
+        :param currency_type: The currency_type of this BlockTxUtxo.
+        :type currency_type: str
+        """
+
+        self._currency_type = currency_type
+
+    @property
     def tx_hash(self):
-        """Gets the tx_hash of this BlockTxSummary.
+        """Gets the tx_hash of this BlockTxUtxo.
 
 
-        :return: The tx_hash of this BlockTxSummary.
+        :return: The tx_hash of this BlockTxUtxo.
         :rtype: str
         """
         return self._tx_hash
 
     @tx_hash.setter
     def tx_hash(self, tx_hash):
-        """Sets the tx_hash of this BlockTxSummary.
+        """Sets the tx_hash of this BlockTxUtxo.
 
 
-        :param tx_hash: The tx_hash of this BlockTxSummary.
+        :param tx_hash: The tx_hash of this BlockTxUtxo.
         :type tx_hash: str
         """
 
@@ -100,20 +127,20 @@ class BlockTxSummary(Model):
 
     @property
     def no_inputs(self):
-        """Gets the no_inputs of this BlockTxSummary.
+        """Gets the no_inputs of this BlockTxUtxo.
 
 
-        :return: The no_inputs of this BlockTxSummary.
+        :return: The no_inputs of this BlockTxUtxo.
         :rtype: int
         """
         return self._no_inputs
 
     @no_inputs.setter
     def no_inputs(self, no_inputs):
-        """Sets the no_inputs of this BlockTxSummary.
+        """Sets the no_inputs of this BlockTxUtxo.
 
 
-        :param no_inputs: The no_inputs of this BlockTxSummary.
+        :param no_inputs: The no_inputs of this BlockTxUtxo.
         :type no_inputs: int
         """
 
@@ -121,20 +148,20 @@ class BlockTxSummary(Model):
 
     @property
     def no_outputs(self):
-        """Gets the no_outputs of this BlockTxSummary.
+        """Gets the no_outputs of this BlockTxUtxo.
 
 
-        :return: The no_outputs of this BlockTxSummary.
+        :return: The no_outputs of this BlockTxUtxo.
         :rtype: int
         """
         return self._no_outputs
 
     @no_outputs.setter
     def no_outputs(self, no_outputs):
-        """Sets the no_outputs of this BlockTxSummary.
+        """Sets the no_outputs of this BlockTxUtxo.
 
 
-        :param no_outputs: The no_outputs of this BlockTxSummary.
+        :param no_outputs: The no_outputs of this BlockTxUtxo.
         :type no_outputs: int
         """
 
@@ -142,20 +169,20 @@ class BlockTxSummary(Model):
 
     @property
     def total_input(self):
-        """Gets the total_input of this BlockTxSummary.
+        """Gets the total_input of this BlockTxUtxo.
 
 
-        :return: The total_input of this BlockTxSummary.
+        :return: The total_input of this BlockTxUtxo.
         :rtype: Values
         """
         return self._total_input
 
     @total_input.setter
     def total_input(self, total_input):
-        """Sets the total_input of this BlockTxSummary.
+        """Sets the total_input of this BlockTxUtxo.
 
 
-        :param total_input: The total_input of this BlockTxSummary.
+        :param total_input: The total_input of this BlockTxUtxo.
         :type total_input: Values
         """
 
@@ -163,20 +190,20 @@ class BlockTxSummary(Model):
 
     @property
     def total_output(self):
-        """Gets the total_output of this BlockTxSummary.
+        """Gets the total_output of this BlockTxUtxo.
 
 
-        :return: The total_output of this BlockTxSummary.
+        :return: The total_output of this BlockTxUtxo.
         :rtype: Values
         """
         return self._total_output
 
     @total_output.setter
     def total_output(self, total_output):
-        """Sets the total_output of this BlockTxSummary.
+        """Sets the total_output of this BlockTxUtxo.
 
 
-        :param total_output: The total_output of this BlockTxSummary.
+        :param total_output: The total_output of this BlockTxUtxo.
         :type total_output: Values
         """
 
